# mumble-web-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
docker/: Dockerfile  README.md  entrypoint.sh  start.sh
protos/: Mumble.proto
src/: connection.rs  error.rs  ice.rs  main.rs  mumble.rs  utils.rs
src/protos/: .gitignore
